--- a/samples/demos/azure-sql-edge-demos/Wind Turbine Demo/ml/wind-turbine-scikit.ipynb
+++ b/samples/demos/azure-sql-edge-demos/Wind Turbine Demo/ml/wind-turbine-scikit.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install scikit-learn==0.22.1 joblib==0.14.1"
+    "!pip install scikit-learn==0.22.1 joblib==0.14.1",
     "pip install seaborn"
    ]
   },
